--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap');
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 body {
- position: relative;
- width: 320px;
- height: 4910px;
- background: #FFFFFF;
+  position: relative;
+  width: 320px;
+  height: 4910px;
+  background: #FFFFFF;
 }
 
 .geomtry2 {
- position: absolute;
- width: 320px;
- height: 160px;
- left: 0px;
- top: 472px;
+  position: absolute;
+  width: 320px;
+  height: 160px;
+  left: 0px;
+  top: 472px;
 }
 
 .menu {
@@ -59,18 +59,23 @@ body {
 }
 
 .bttn {
- position: absolute;
- width: 203.68px;
- height: 26.47px;
- left: 58px;
- top: 402px;
- font-family: 'Poppins';
- font-style: normal;
- font-weight: 500;
- font-size: 16px;
- line-height: 24px;
- text-align: center;
- color: #FFFFFF;
- background-color: #1A2236;
+  left: 16px;
+  top: 390px;
+  width: 288px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #FFFFFF;
+  line-height: 24px;
+  text-align: center;
+  font-style: normal;
+  position: absolute;
+  box-sizing: border-box;
+  font-family: 'Poppins';
+  background-color: #1A2236;
 }
 
+.spacer {
+  position: absolute;
+  inset: 450px 0 0 0;
+}
