--- a/style.css
+++ b/style.css
@@ -79,3 +79,68 @@ body {
   position: absolute;
   inset: 450px 0 0 0;
 }
+
+.pHeader {
+  top: 672px;
+  left: 16px;
+  width: 181px;
+  height: 50px;
+  font-size: 50px;
+  color: #1a2236;
+  font-weight: 400;
+  line-height: 100%;
+  position: absolute;
+  font-style: normal;
+  font-family: 'Playfair Display', serif;
+}
+
+.pList {
+  left: 0;
+  top: 754px;
+  width: 320px;
+  display: grid;
+  position: absolute;
+  grid-template-columns: 1fr;
+}
+
+.p {
+  gap: 0.5rem;
+  width: 320px;
+  height: 342px;
+  display: flex;
+  background: #1a2236;
+  flex-direction: column;
+}
+
+.tags {
+  display: flex;
+  gap: 0.2rem;
+}
+
+.tag {
+  font-family: 'Poppins', serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10.3334px;
+  line-height: 80%;
+  color: #1a2236;
+  padding: 1rem;
+  background: #98DEDE;
+}
+
+h3 {
+  width: 264px;
+  height: 16px;
+  font-family: 'Poppins', serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 80%;
+  color: #fff;
+}
+
+.see {
+  width: 178px;
+  height: 44px;
+  border: 1px solid #FFFFFF;
+}
