--- a/style.css
+++ b/style.css
@@ -7,26 +7,27 @@
 }
 
 body {
-  position: relative;
-  width: 320px;
+  width: 400px;
+  margin: auto;
   height: 4910px;
+  position: relative;
   background: #fff;
 }
 
 .geomtry2 {
   position: absolute;
-  width: 320px;
+  width: 100%;
   height: 160px;
   left: 0;
   top: 472px;
 }
 
 .menu {
-  position: absolute;
+  top: 19px;
+  right: 10px;
   width: 20px;
   height: 14px;
-  left: 284px;
-  top: 19px;
+  position: absolute;
 }
 
 .title {
@@ -45,37 +46,55 @@ body {
 
 .paragraph {
   position: absolute;
-  width: 288px;
+  width: 300px;
   height: 126px;
   left: 16px;
   top: 224px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 1.1rem;
   line-height: 21px;
   letter-spacing: -0.01em;
   color: #1a2236;
 }
 
 .bttn {
-  left: 16px;
-  top: 390px;
   width: 288px;
   height: 50px;
+  color: #fff;
   font-size: 16px;
   font-weight: 500;
-  color: #fff;
   line-height: 24px;
   text-align: center;
   font-style: normal;
   position: absolute;
   box-sizing: border-box;
-  font-family: 'Poppins', serif;
+  inset: 390px auto 0 45px;
   background-color: #1a2236;
+  font-family: 'Poppins', serif;
+}
+
+.bttn:hover {
+  cursor: pointer;
+  color: #1a2236;
+  background-color: #fff;
+  border: 1px solid #1A2236
+}
+
+.bttn:active {
+  cursor: pointer;
+  color: #1a2236;
+  background-color: #fff;
+  border: 2px solid #1A2236
 }
 
 .spacer {
-  position: absolute;
+  width: 100%;
+  height: 200px;
   inset: 450px 0 0 0;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-image: url('./images/image_geometry_2.png');
+  background-size: cover;
 }
