--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
   line-height: 80%;
   color: #1a2236;
   padding: 1rem;
-  background: #98DEDE;
+  background: #98dede;
 }
 
 h3 {
@@ -157,7 +157,7 @@ h3 {
 .see {
   width: 178px;
   height: 44px;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #fff;
   position: absolute;
   background-repeat: no-repeat;
   background-image: url('./images/image_geometry_2.png');
