--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ body {
   width: 100%;
   height: 200px;
   inset: 450px 0 0 0;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-image: url('./images/image_geometry_2.png');
+  background-size: cover;
 }
 
 .pHeader {
