--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap');
 
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   }
 
 
@@ -257,26 +257,24 @@ h3 {
 }
 
 .Langblock {
-position: absolute;
-width: 289px;
-height: 289px;
-left: 16px;
-top: 3180px;
-background-color: #1C528A;
-padding-left: 72px;
-padding-top: 26px;
-color: white;
-font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 30px;
-
-
+ position: absolute;
+ width: 289px;
+ height: 289px;
+ left: 16px;
+ top: 3180px;
+ background-color: #1C528A;
+ padding-left: 72px;
+ padding-top: 26px;
+ color: white;
+ font-family: 'Poppins';
+ font-style: normal;
+ font-weight: 800;
+ font-size: 18px;
+ line-height: 30px;
 }
 
 .frmblock {
-  position: absolute;
+position: absolute;
 width: 289px;
 height: 289px;
 left: 16px;
@@ -286,13 +284,11 @@ padding-left: 72px;
 padding-top: 26px;
 color: white;
 font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 22px;
-  }
-
-
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 22px;
+}
 
 .skillblock {
   position: absolute;
@@ -305,19 +301,99 @@ font-family: 'Poppins';
   padding-top: 26px;
   color: white;
   font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 30px;
-
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 30px;
 }
+
 .blcimages{
-position: absolute;
-width: 102px;
-height: 102px;
-left: 203px;
-top: 3367px;
-background: #547DA7;
+  position: absolute;
+  width: 102px;
+  height: 102px;
+  left: 203px;
+  top: 3367px;
+  background: #547DA7;
+  }
+  
+.abget{
+ position: absolute;
+ width: 249px;
+ height: 100px;
+ left: 16px;
+ top: 4235px;
+ font-family: 'Playfair Display', serif;
+ font-style: normal;
+ font-weight: 400;
+ font-size: 50px;
+ line-height: 100%;
+ color: #1A2236;
+}  
+
+.geomtry3{
+ position: absolute;
+ width: 111px;
+ height: 74.02px;
+ left: 0px;
+ top: 4129px;
 }
 
-.
+.paragraph1{
+position: absolute;
+width: 288px;
+height: 63px;
+left: 16px;
+top: 4305px;
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 1.1rem;
+line-height: 21px;
+letter-spacing: -0.01em;
+color: #1a2236;
+}
+.text{
+position: absolute;
+width: 55px;
+height: 15px;
+left: 32px;
+top: 4404px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 10px;
+line-height: 15px;
+}
+.email{
+ position: absolute;
+ width: 54px;
+ height: 15px;
+ left: 32px;
+ top: 4464px;
+ font-family: 'Poppins';
+ font-style: normal;
+ font-weight: 400;
+ font-size: 10px;
+ line-height: 15px;
+ color: #7D7C84;
+}
+
+.message{
+ position: absolute;
+ width: 182px;
+ height: 21px;
+ left: 32px;
+ top: 4535px;
+ font-family: 'Poppins';
+ font-style: normal;
+ font-weight: 400;
+ font-size: 14px;
+ line-height: 21px;
+ color: #7D7C84;
+}
+
+.submit{
+
+
+
+}
