--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   display: block;
   width: 400px;
@@ -144,7 +143,6 @@ body {
   font-family: 'Playfair Display', serif;
 }
 
-
 .pList {
   left: 20px;
   top: 754px;
@@ -269,14 +267,14 @@ h3 {
   height: 289px;
   left: 16px;
   top: 3180px;
-  background-color: #1C528A;
+  background-color: #1c528a;
   background-image: url('./images/ic_languages_mob.png');
   background-repeat: no-repeat;
   background-position: bottom right;
   padding-left: 72px;
   padding-top: 26px;
   color: white;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -289,14 +287,14 @@ h3 {
   height: 289px;
   left: 16px;
   top: 3469px;
-  background-color: #E2505C;
+  background-color: #e2505c;
   background-image: url('./images/ic_framework.png');
   background-repeat: no-repeat;
   background-position: bottom right;
   padding-left: 72px;
   padding-top: 26px;
   color: white;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -309,14 +307,14 @@ h3 {
   height: 289px;
   left: 16px;
   top: 3790px;
-  background-color: #FEBF52;
+  background-color: #febf52;
   background-image: url('./images/ic_skills.png');
   background-repeat: no-repeat;
   background-position: bottom right;
   padding-left: 72px;
   padding-top: 26px;
   color: white;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -329,7 +327,7 @@ h3 {
   height: 102px;
   left: 203px;
   top: 3367px;
-  background: #547DA7;
+  background: #547da7;
 }
 
 .abget {
@@ -343,14 +341,13 @@ h3 {
   font-weight: 400;
   font-size: 50px;
   line-height: 100%;
-  color: #1A2236;
+  color: #1a2236;
 }
 
 .geomtry3 {
   position: absolute;
   width: 111px;
   height: 74.02px;
-  left: 0px;
   top: 4129px;
 }
 
@@ -375,7 +372,7 @@ h3 {
   height: 52px;
   left: 16px;
   top: 4404px;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -388,12 +385,12 @@ h3 {
   height: 52px;
   left: 16px;
   top: 4460px;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 15px;
-  color: #7D7C84;
+  color: #7d7c84;
 }
 
 .message {
@@ -402,12 +399,12 @@ h3 {
   height: 112px;
   left: 16px;
   top: 4520px;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-  color: #7D7C84;
+  color: #7d7c84;
 }
 
 .submit {
@@ -416,12 +413,12 @@ h3 {
   height: 44px;
   left: 16px;
   top: 4652px;
-  background: #1A2236;
-  font-family: 'Poppins';
+  background: #1a2236;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
-  color: #FFFFFF;
+  color: #fff;
 }
